<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpressLookupFragment"
    tools:showIn="@layout/activity_express_lookup">

    <TableRow
        android:id="@+id/selectionTitleRow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/selectionTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/placeholder_selection_title"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:id="@+id/selectionsListRow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <ImageButton
            android:id="@+id/navLeftButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/description_nav_left"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:visibility="visible" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            app:cardBackgroundColor="@android:color/white">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/selectionsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/content_list_item" />
        </android.support.v7.widget.CardView>

        <ImageButton
            android:id="@+id/navRightButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/description_nav_right"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:id="@+id/toggleButtonsRow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ToggleButton
            android:id="@+id/mainToggleButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="@string/label_main_toggle_button"
            android:textOn="@string/label_main_toggle_button"
            android:background="?attr/selectableItemBackground" />

        <ToggleButton
            android:id="@+id/sideToggleButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOff="@string/label_side_toggle_button"
            android:textOn="@string/label_side_toggle_button"
            android:background="?attr/selectableItemBackground" />

        <ToggleButton
            android:id="@+id/bothToggleButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/label_both_toggle_button"
            android:textOn="@string/label_both_toggle_button"
            android:background="@xml/toggle_button_on" />
    </TableRow>

</TableLayout>